--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<div id="app"></div>
+<h1>Aplicativo TS</h1>
+<hr />
+<h2>Par ou ímpar</h2>
+<input type="number" value="2" id="parimpar_input" />
+<button id="btn_pi">Validar</button>
+<div id="resultado_pi"></div>
+
+<h2>Tabuada</h2>
+<input type="number" value="2" id="tabuada_input" />
+<button id="btn_tabu">Gerar</button>
+<table id="resultado_tabu"></table>
+
+<h2>Números aleatórios</h2>
+<input type="number" value="2" id="ale_input" />
+<button id="btn_ale">Gerar</button>
+<table>
+  <thead>
+    <tr>
+      <th>Índice</th>
+      <th>Número</th>
+    </tr>
+  </thead>
+  <tbody id="resultado_ale"></tbody>
+</table>
