--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h2>Tabuada</h2>
 <input type="number" value="2" id="tabuada_input" />
-<button id="btn_tabu">Gerar</button>
+<button id="btn_tabu">Calcular</button>
 <table id="resultado_tabu"></table>
 
 <h2>Números aleatórios</h2>
@@ -22,3 +22,9 @@
   </thead>
   <tbody id="resultado_ale"></tbody>
 </table>
+
+<br />
+<h2>Temporizador</h2>
+<button id="btn_temp_start">Iniciar</button> &nbsp;
+<button id="btn_temp_stop">Parar</button>
+<div id="resultado_temp"></div>
