--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 <br />
 <h2>Temporizador</h2>
 <button id="btn_temp_start">Iniciar</button> &nbsp;
+<button id="btn_temp_cont">Continuar</button> &nbsp;
 <button id="btn_temp_stop">Parar</button>
 <div id="resultado_temp"></div>
